--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^5.6.2",
+    "autoprefixer": "^10.4.14",
     "babel-plugin-macros": "^3.1.0",
     "emailjs-com": "^3.2.0",
+    "postcss": "^8.4.24",
+    "postcss-cli": "^10.1.0",
+    "postcss-loader": "^7.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
