--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,11 +15,15 @@
     "autoprefixer": "^10.4.14",
     "babel-plugin-macros": "^3.1.0",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.7.4",
+    "lucide-react": "^0.503.0",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
     "postcss-loader": "^7.3.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^1.0.1"
   },
